# PAOO

./: CMakeLists.txt
inc/: ElementChimic.hpp  Metal.hpp  Nemetal.hpp
src/: ElementChimic.cpp  Main.cpp  Metal.cpp  Nemetal.cpp
